trivia/static/style.css
html { overflow-y: scroll; }
body { font-family: Calibri, Arial, sans-serif; margin: 0; padding: 0; position: relative; }
* { box-sizing: border-box; }

.controls { float: right; font-size: 80%; padding-top: 0.25em; }
.score-total { border-right: 1px dashed #333; font-weight: bold; }
.score-team-name { position: relative; }
.score-team-name span { left: 0; overflow: hidden; position: absolute; top: 0.25em; text-overflow: ellipsis; white-space: nowrap; width: 100%; }
.score-team-name:before { content: "&nbsp;"; visibility: hidden; }

/* Projector View */
.ui-content { font-size: 300%; padding: 0.25em 0; }
tr[data-row-index="0"] td { border-top: 0.25em solid #000; }

.ui-header { background-color: #b51329; border-bottom: 2px solid #27233a; color: #fff; padding: 0.5em 1em; }
/*.ui-content { padding: 0.5em 1em; }*/
.ui-footer { }

.center { text-align: center; }
.pointer { cursor: pointer; }
.right { text-align: right; }
.rank-pad { padding-left: 0.3em; padding-right: 0.2em;}
.small-no-wrap { white-space: nowrap; width: 1%; }

.callout { border: 1px solid transparent; margin-bottom: 0.5em; padding: 0.5em; }
.callout { background-color: #d9edf7; border-color: #bce8f1; color: #333; }
.callout-danger { background-color: #fcc; border-color: #e55; }
.callout-warning { background-color: #ffa; border-color: #e9e925; }
.callout-success { background-color: #dfd; border-color: #5e5; }
.callout-critical { background-color: #e68fe6; border-color: #cc2ecc; }

.table { margin-bottom: 0.5em; width: 100%; }
.table td { border-top: 1px solid #ddd; padding: 0.25em 0.5em; vertical-align: middle; }
.table thead td, .thead td { border-bottom: 2px solid #ddd; font-weight: bold; vertical-align: bottom; }
.table-striped { }
.table-striped > tbody > tr:nth-child(odd) { background-color: #f0f0f0; }
.table-striped > tbody > tr.has-warning:nth-child(odd) { background-color: #faf2cc; border-color: #f8e5be; }
.table-hover > tbody > tr:hover { background-color: #e0e0e0; } /* hover needs to come after striped so that striped rows have hover */
.table-hover > tbody > tr.has-warning:hover, .table-hover > tbody > tr.has-warning-hover:hover { background-color: #f8edb5; border-color: #f6e79d; }

